applications/kubevirt/namespace-vm-images.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vm-images
  labels:
    kubevirt.io: ""
    pod-security.kubernetes.io/enforce: "privileged"
