applications/kubevirt/namespace-vms.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vms
  labels:
    kubevirt.io: ""
    pod-security.kubernetes.io/enforce: "privileged"
