applications/kubevirt/cdi-uploadproxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdi-uploadproxy-loadbalancer
  namespace: kubevirt
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    cdi.kubevirt.io: cdi-uploadproxy
  type: LoadBalancer
