applications/kubevirt/cdi-uploadproxy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cdi
  name: cdi-uploadproxy
  labels:
    monitoring: "true"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cdi-uploadproxy.initialed85.cc
      secretName: cdi-uploadproxy
  rules:
    - host: cdi-uploadproxy.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
